--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -15,3 +15,5 @@ jobs:
       run: make re
     - name: Test basic command in input
       run: echo -e "ls;ls -la; error; cat Makefile ; env \n ls -la ; export a=a ; env ; export" | ./minishell
+    - name: Unit tests
+      run: make test
